<resources>
    <string name="app_name">Android Tutorial</string>
    <string name="android_tutorial">Android Tutorial</string>
    <string name="start">start</string>
    <string name="Next">Next</string>
    <string name="_0_of_8_questions_have_been_answered">%1$s of 8 questions have been answered</string>
    <string name="title_activity_question0">Question0</string>
    <string name="question_2">question 2</string>
    <string name="question_1">question 1</string>
    <string name="question_3">question 3</string>
    <string name="question_4">question 4</string>
    <string name="question_5">question 5</string>
    <string name="question_8">question 8</string>
    <string name="question_9">question 9</string>
    <string name="question_6">question 6</string>
    <string name="previous">previous</string>
    <string name="find_the_error_in_the_image_above_then_rewrite_it">find the Error in the image above then rewrite it</string>
    <string name="choose_the_view_groups_from_the_options_below">choose the View Groups from the options below</string>
    <string name="linearlayout">LinearLayout</string>
    <string name="imageview">ImageView</string>
    <string name="relativelayout">RelativeLayout</string>
    <string name="textview">TextView</string>
    <string name="define_a_string_variable_and_give_it_value_of_awesome_nthen_assign_the_value_to_a_textview_with_id_text1_n">Define A String Variable and give it value of(Awesome) then assign the value to a TextView with id Text1</string>
    <string name="layout_width">Layout_width</string>
    <string name="text">text</string>
    <string name="layout_height">Layout_height</string>
    <string name="padding">padding</string>
    <string name="what_are_the_mandatory_attributes_for_any_view">what are the mandatory attributes for any View</string>
    <string name="write_the_final_value_of_i_variable">write the final value of (i) variable</string>
    <string name="question_7">question 7</string>
    <string name="show_result">Show Result</string>
    <string name="Home">Home</string>
    <string name="Continue">Continue</string>
    <string name="startactivitytoresult">startActivityToResult()</string>
    <string name="startactivityforresult">startActivityForResult()</string>
    <string name="bundle">Bundle()</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="how_to_get_a_response_from_an_activity_in_android">How to get a response from an activity in Android?</string>
    <string name="what_is_android_view_group">What is android view group?</string>
    <string name="collection_of_views_and_other_child_views">Collection of views and other child views</string>
    <string name="base_class_of_building_blocks">Base class of building blocks</string>
    <string name="layouts">Layouts</string>
    <string name="notice_the_answer_is_case_sensitive">Notice:the answer is case sensitive</string>
    <string name="notice_the_answer_is_case_sensitive_and_separate_views_with">Notice: the answer is case sensitive and separate views with (,)</string>
    <string name="write_the_views_in_the_app_above">Write the Views in the app above</string>
    <string name="congratulations">Congratulations</string>
    <string name="result">Result</string>
    <string name="submit">Submit</string>
</resources>
