<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.androidtutorial.Question1Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/Header1"
        android:padding="@dimen/header_initial_padding">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/android_tutorial"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/AnswersMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/logo"
            android:layout_marginTop="10dp"
            android:text="@string/question_1"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:id="@+id/Header2"
        android:layout_below="@id/Header1"
        android:background="@color/colorPrimaryLight" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:layout_below="@id/Header2"
        android:layout_above="@id/Footer">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/QuestionBackground"
        android:gravity="center"
        android:background="@color/questionsBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_get_a_response_from_an_activity_in_android"
            android:textSize="@dimen/question_header_text_size"
            android:padding="@dimen/questions_initial_padding"
            android:background="@color/colorPrimaryLight"
            android:textColor="@color/questionsBackground"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/question_content_margin_top"
            android:padding="@dimen/questions_initial_padding"
            android:background="@color/colorPrimaryLight">

            <RadioButton
                android:id="@+id/startActivityForResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startactivitytoresult"
                android:textColor="@color/questionsBackground" />
            <RadioButton
                android:layout_width="match_parent"
                android:textColor="@color/questionsBackground"
                android:id="@+id/startActivityToResult"
                android:layout_height="wrap_content"
                android:text="@string/startactivityforresult"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/questionsBackground"
                android:id="@+id/Bundle"
                android:text="@string/bundle"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/questionsBackground"
                android:id="@+id/NoneOfTheAbove"
                android:text="@string/none_of_the_above"/>
        </RadioGroup>
    </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/Footer"
        android:layout_alignParentBottom="true"
        android:padding="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/Next"
            android:onClick="next"
            android:textColor="@color/questionsBackground"
            android:background="@drawable/buttonnext"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textColor="@color/questionsBackground"
            android:onClick="back"
            android:background="@drawable/buttonprevious"/>
    </RelativeLayout>
</RelativeLayout>