<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.androidtutorial.Question1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/Header1"
        android:padding="15dp">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/android_tutorial"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/AnswersMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/logo"
            android:layout_marginTop="10dp"
            android:text="@string/question_8"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
        <Button
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_below="@id/logo"
            android:background="@drawable/button"
            android:onClick="GoHome"
            android:text="@string/Home"
            android:textSize="10sp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:id="@+id/Header2"
        android:layout_below="@id/Header1"
        android:background="@color/colorPrimaryLight" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:layout_below="@id/Header2"
        android:layout_above="@id/Footer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/QuestionBackground"
            android:background="@color/quetionsBackground"
            android:padding="10dp">
            <ImageView
                android:layout_width="250dp"
                android:layout_height="350dp"
                android:scaleY="1"
                android:scaleX="1"
                android:scaleType="fitXY"
                android:src="@drawable/question8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/write_the_views_in_the_app_above"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice_the_answer_is_case_sensitive_and_separate_views_with"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:background="#ffffff"
                android:id="@+id/AnsweringArea4"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/Footer"
        android:layout_alignParentBottom="true"
        android:padding="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/submit"
            android:onClick="Next"
            android:background="@drawable/button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:onClick="Back"
            android:background="@drawable/button"/>
    </RelativeLayout>
</RelativeLayout>