<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.androidtutorial.Question1Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/Header1"
        android:padding="@dimen/header_initial_padding">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/android_tutorial"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/header_logo_text_size" />

        <TextView
            android:id="@+id/AnswersMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button3"
            android:layout_alignBottom="@+id/button3"
            android:layout_alignParentEnd="true"
            android:text="@string/question_3"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
        <Button
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_below="@id/logo"
            android:background="@drawable/button"
            android:text="@string/Home"
            android:layout_marginTop="@dimen/header_initial_margin_top"
            android:onClick="goHome"
            android:textSize="10sp"
            android:id="@+id/button3" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:id="@+id/Header2"
        android:layout_below="@id/Header1"
        android:background="@color/colorPrimaryLight" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:layout_below="@id/Header2"
        android:layout_above="@id/Footer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/QuestionBackground"
            android:gravity="center"
            android:background="@color/questionsBackground"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/define_a_string_variable_and_give_it_value_of_awesome_nthen_assign_the_value_to_a_textview_with_id_text1_n"
                android:textSize="@dimen/question_header_text_size"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/question_notice_text_size"
                android:text="@string/notice_the_answer_is_case_sensitive"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#ffffff"
                android:layout_marginTop="15dp"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideInset"
                android:layout_weight="2"
                android:gravity="start"
                android:textSize="20sp"
                android:id="@+id/AnsweringArea" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/Footer"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/bottom_initial_padding">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/Next"
            android:onClick="next"
            android:textColor="@color/questionsBackground"
            android:background="@drawable/buttonnext"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textColor="@color/questionsBackground"
            android:onClick="back"
            android:background="@drawable/buttonprevious"/>
    </RelativeLayout>
</RelativeLayout>